# jd-editor

./: .travis.yml  readme.txt  setup.cfg
jdtc-editor/: __main__.py
jdtc-editor/static/: style.css
jdtc-editor/templates/: index.html
samples/: index.html
weditor/: __main__.py
weditor/static/: style.css
weditor/templates/: index.html
