[metadata]
name = atx-editor
author = xuzhenglei
author-email = 994521674@qq.com
summary = tool for writing app script
license = MIT
home-page = https://github.com/start-fish/jdtc-editor
description-file = README.md
classifier =
	Environment :: Console
	Intended Audience :: Developers
	Operating System :: OS Independent
	Programming Language :: Python

[files]
packages =
	jdtc-editor

[entry_points]
console_scripts =
    weditor = weditor.__main__:main
